--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -159,12 +159,13 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 /* Index.html - Business Card (portfolio)*/
 .background-custom{
-  background-image: url('../img/4.png');
-  position:relative; z-index:-1; top:-5px; height: 300px; margin:0; background-position:center top; background-repeat: no-repeat; background-size:100%;}
+  /*background-image: url('../img/4.png');*/
+  position:absolute; z-index:-1; height: 300px; margin:0; background-position:center top; background-repeat: no-repeat; background-size:100%;}
 
-.main-business{position:relative; top:-305px;}
-.main-business h2{display: inline-block; text-align:left; font-weight: 500; font-size: 56px; letter-spacing: -3px; margin:0;}
-.main-business h3{display:inline-block; margin-left: 1.5rem; text-align:left; font-weight: 500; font-size:22px; letter-spacing: -2px; color: #727272; }
+.main-business{position:relative; margin-bottom:3vh;}
+.main-business-tt h2{display: inline-block; text-align:left; font-weight: 500; font-size: 56px; letter-spacing: -3px; margin:0;}
+.main-business-tt h3{display:inline-block; margin-left: 1.5rem; text-align:left; font-weight: 500; font-size:22px; letter-spacing: -2px; color: #727272; }
+.main-business-tt{position:relative; top:-12px;}
 
 .card{ cursor: pointer; border-radius:0; border:1px solid rgba(0,0,0,0.2); overflow: hidden; }
 .portfolio{margin-top:70px; }
@@ -191,6 +192,18 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 
 .wrap { margin:0;}
+
+#bottom-info{display:flex;
+  width:100%;
+  overflow: hidden;
+  max-height:300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 
 .content{
   margin-top: 20px;
@@ -533,13 +546,14 @@ footer span{color:#727272; padding:5px}
 }
 
 @media (max-width: 1400px){
-.background-custom{top:10px;}
+  .main-business-tt h2{font-size: 50px;}
+  .main-business-tt h3{font-size: 20px; letter-spacing: -1px;}
 }
 
 @media (max-width: 1200px){
   .nav-link{font-size:20px;}
-  .main-business h2{font-size: 46px;}
-  .main-business h3{font-size: 16px; letter-spacing: -1px;}
+  .main-business-tt h2{font-size: 46px;}
+  .main-business-tt h3{font-size: 16px; letter-spacing: -1px;}
   .sub-menu-btn a{font-size: 20px;}
 }
 
@@ -550,8 +564,8 @@ footer span{color:#727272; padding:5px}
   }
   .top-util{display:none}
   .nav-link{font-size:18px}
-  .main-business h2{font-size: 36px;}
-  .main-business h3{font-size: 14px;  letter-spacing: -1px;}
+  .main-business-tt h2{font-size: 36px;}
+  .main-business-tt h3{font-size: 14px;  letter-spacing: -1px;}
   #greet h2{font-size: 24px;}
   #greet h3{font-size: 20px;}
   .top-area .top-text h1{width:100%; display:block; right:0; }
@@ -561,8 +575,8 @@ footer span{color:#727272; padding:5px}
   .sub-menu-btn a{font-size: 18px;}
 }
 @media (max-width: 768px){
-  .main-business h2{font-size: 32px;}
-  .main-business h3{font-size: 12px;}
+  .main-business-tt h2{font-size: 32px;}
+  .main-business-tt h3{font-size: 12px;}
   .portfolio {margin-top:30px;}
   #greet h2{font-size: 20px;}
   #greet h3{font-size: 18px;}
@@ -572,8 +586,8 @@ footer span{color:#727272; padding:5px}
   .main-content .container{padding:20px;}
   .main-content .title-bar h1{font-size:28px; margin-bottom: .5rem;}
   .main-content .breadcrumb{display:none;}
-  .main-business h2{font-size: 26px; margin-left:3rem;} 
-  .main-business h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
+  .main-business-tt h2{font-size: 20px; margin-left:3rem;} 
+  .main-business-tt h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
   .nav-link{font-size:15px;}
   .nav-sub-text{font-size: 10px; line-height: 2px;}
 
