--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -193,25 +193,32 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 .wrap { margin:0;}
 
-#bottom-info{display:flex;
+#bottom-info{
+  position:relative;
+  display:inline-flex;
+  text-align: center;
   width:100%;
   overflow: hidden;
   max-height:300px;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  justify-content: center;
 }
 
+/* Index.html: bottom-info */
 
-.content{
-  margin-top: 20px;
-}
+#bottom-info .flex-container{position:absolute; display:flex; flex-direction:column; width:100%; height:100%; margin:auto; justify-content: center;}
 
-#sub-menu{
-  font-weight:700;
+#bottom-info video{width:100%; object-fit: cover; z-index:-10;}
+#bottom-info ul{  display:flex; margin:0;
+  flex-direction: row;
+  justify-content: center;
 }
+#bottom-info li{ padding:10px; font-size:24px; vertical-align: bottom; padding-bottom: 0;}
+#bottom-info li a{ color:black; font-weight: 600; line-height:3rem; letter-spacing: -2px;}
+#bottom-info img{width:28%;}
+
+
+.content{ margin-top: 20px; }
+#sub-menu{ font-weight:700; }
 
 .carousel-item {
   max-height:700px;
@@ -222,6 +229,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   -o-background-size: cover;
   background-size: cover;
 }
+
 video{width:100%; max-height:700px;}
 
 
@@ -573,6 +581,8 @@ footer span{color:#727272; padding:5px}
   
   .list-group-item{text-align: center; padding: .75rem 1.25rem;}
   .sub-menu-btn a{font-size: 18px;}
+
+  #bottom-info li a{ font-size:20px; line-height:2rem; }
 }
 @media (max-width: 768px){
   .main-business-tt h2{font-size: 32px;}
@@ -625,6 +635,7 @@ footer span{color:#727272; padding:5px}
   .normal-tb td{font-size:10px;}
   .work-tb th{font-size:12px;}
   .work-tb td{font-size:10px;}
+  #bottom-info li a{ font-size:18px; line-height:1rem; letter-spacing: -1px;}
 }
 
 
