--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -333,8 +333,8 @@ footer span{color:#727272; padding:5px}
 
 
 /* Greet.html */
-#greet .img-feature{width:27%; height:550px; background:no-repeat 60% bottom scroll; background-size:cover; margin:auto;}
-#greet-content{width:67%; margin:2rem auto;}
+#greet .img-feature{width:27%; height:600px; background:no-repeat 60% bottom scroll; background-size:cover; margin:auto;}
+#greet-content{width:67%; margin:0 auto;}
 #greet h2 {font-size:24px; font-weight: 500; color:#333333; text-align: center; margin:30px auto; letter-spacing: -2px;}
 #greet h3{letter-spacing: -2px; margin-top:2.5rem; font-size:22px; line-height: 2.5rem;}
 #greet p{ text-align:justify; letter-spacing: -1px; font-size:16px;}
@@ -511,11 +511,7 @@ footer span{color:#727272; padding:5px}
 .circle-list{border-spacing:30px;}
 
 /* Sub menu button */
-<<<<<<< HEAD
-
-=======
 .sub-menu-btn {display: inline-block; width:100%}
->>>>>>> main-design
 
 .sub-menu-btn div{
   float:left;
@@ -559,41 +555,38 @@ footer span{color:#727272; padding:5px}
   justify-content: space-between;
 }
 
-<<<<<<< HEAD
-=======
 @media (max-width: 1400px){
   .main-business-tt h2{font-size: 50px;}
   .main-business-tt h3{font-size: 20px; letter-spacing: -1px;}
 }
->>>>>>> main-design
 
 @media (max-width: 1200px){
   .nav-link{font-size:20px;}
   .main-business-tt h2{font-size: 46px;}
   .main-business-tt h3{font-size: 16px; letter-spacing: -1px;}
   .sub-menu-btn a{font-size: 20px;}
+  #greet h2{font-size: 20px;}
 }
 
 @media (max-width: 992px){ 
   .nav-sub-list.container {
-<<<<<<< HEAD
-    padding: 0;
-=======
     padding: 0 .8rem ;
->>>>>>> main-design
     margin:0 auto;
   }
   .top-util{display:none}
   .nav-link{font-size:18px}
   .main-business-tt h2{font-size: 36px;}
   .main-business-tt h3{font-size: 14px;  letter-spacing: -1px;}
-  #greet h2{font-size: 24px;}
+
+  #greet .intro-effect:after{top:40px; font-size:62px;}
+  #greet .intro-effect:before{top:15px; font-size:62px;}
   #greet h3{font-size: 20px;}
   .top-area .top-text h1{width:100%; display:block; right:0; }
   .top-area .top-text p{width:100%; display:block; right:0; text-align:center;}
   
   .list-group-item{text-align: center; padding: .75rem 1.25rem;}
-  .sub-menu-btn a{font-size: 18px;}
+  .sub-menu-btn a{font-size: 16px;}
+  .sub-menu-btn.col4 div{height: 80px;}
 
   #bottom-info li a{ font-size:20px; line-height:2rem; }
 }
@@ -601,34 +594,27 @@ footer span{color:#727272; padding:5px}
   .main-business-tt h2{font-size: 32px;}
   .main-business-tt h3{font-size: 12px;}
   .portfolio {margin-top:30px;}
+
   #greet h2{font-size: 20px;}
   #greet h3{font-size: 18px;}
+  #greet-content{margin:1rem auto; width:90%;}
+  #greet .img-feature{display:none;}
+
   #history .history-events{font-size:14px; padding:3px;}
 }
 @media (max-width: 576px){
   .main-content .container{padding:20px;}
   .main-content .title-bar h1{font-size:28px; margin-bottom: .5rem;}
-<<<<<<< HEAD
-  .main-content .breadcrumb{font-size:12px;}
-  .main-business h2{font-size: 26px; margin-left:3rem;} 
-  .main-business h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
-  .nav-sub-list.container {
-    padding: 0 .8rem ;
-    margin:0 auto;
-  }
-  .nav-link{font-size:15px;}
-  .nav-sub-text{font-size: 10px; line-height: 2px;}
-=======
-  .main-content .breadcrumb{display:none;}
+  .main-content .breadcrumb{display:none!important;}
   .main-business-tt h2{font-size: 20px; margin-left:3rem;} 
   .main-business-tt h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
   .nav-link{font-size:15px;}
+  .nav-sub{display:none!important;}
   .nav-sub-text{font-size: 10px; line-height: 2px;}
 
   .portfolio-item{padding:10px 20px;}
 
->>>>>>> main-design
-  #greet h2{font-size: 16px;}
+  #greet h2{font-size: 16px; margin-bottom:1rem; margin-top:0;}
   #greet h3{font-size: 14px; margin:.5rem auto; line-height: 1.5rem;}
   #greet p{font-size: 10px; margin:.5rem auto; line-height: 1.5rem;}
 
@@ -642,8 +628,8 @@ footer span{color:#727272; padding:5px}
   #history .history-events{padding:3px; font-size:10px; }
   #history .history-content{margin-left:2em;}
 
-  .sub-menu-btn a{font-size: 14px; font-weight: 400;}
-  .sub-menu-btn.col4 div{height: 80px;}
+  .sub-menu-btn a{font-size: 12px; font-weight: 400;}
+  .sub-menu-btn.col4 div{height: 80px; margin:0;}
 
   .business-content .sub-tit{font-size:18px; font-weight:400;}
   .business-content p{font-size:13px; font-weight:400; line-height: 1rem;}
