--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -62,7 +62,6 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 }
 
 .nav-sub-list{
-  padding-bottom: 20px;
   margin:0 auto;
 }
 .nav-sub-list.container{
@@ -86,13 +85,15 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 .nav-sub0 ul li{padding:.1rem 0;}
 .nav-sub0 a:hover{ font-weight: 700;}
 .nav-sub-text{ 
-  font-size: 15px; color:black;
+  font-size: 16px; color:#333333;
   font-weight:400;
 }
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(0,0,0,.8);
-    font-weight: 600;
+    color: rgba(19, 11, 11, 0.9);
+    font-weight: 500;
+    letter-spacing:-2px;
 }
+.top-util{position: relative; top:-10px; right:-10px;}
 .top-util ul{
   display:flex;
   flex-direction: row;
@@ -169,7 +170,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 .main-business-tt{position:relative; top:-12px;}
 
 .card{ cursor: pointer; border-radius:0; border:1px solid rgba(0,0,0,0.2); overflow: hidden; }
-.portfolio{margin-top:70px; }
+.portfolio{margin-top:70px; justify-content: center;}
 .portfolio-item{height:450px; padding-right:4px; padding-left:4px;}
 .portfolio-item:hover .card-img{  transform: scale(1.05);
   transition: transform 700ms cubic-bezier(0.165, 0.84, 0.44, 1) 0ms;}
@@ -178,7 +179,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms;
   background-color: black; }
 
-.card-bg{position:absolute; z-index:20; width:100%; height:450px; opacity:0.0; background-color: black; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
+.card-bg{position:absolute; z-index:20; width:100%; height:100%; opacity:0.0; background-color: black; transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1) 0ms; }
 
 .card-img{ width:100%; height:260px; border-radius:0; background: no-repeat center center scroll; background-size:cover;
   transform: scale(1);
@@ -187,7 +188,8 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
 
 .card-head{overflow:hidden;}
-.card-title{text-align: center; font-weight: 600; letter-spacing:-2px;}
+.card-body{padding:.75rem;}
+.card-title{text-align: center; font-weight: 600; letter-spacing:-2px; margin-bottom: .5rem;}
 .card-title a{ color:black;}
 .card-text{margin-top: 1.5rem; font-size:17px; letter-spacing:-1px; color:#333333; text-align:center;}
 
@@ -202,6 +204,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   overflow: hidden;
   max-height:300px;
   justify-content: center;
+  margin-bottom:0;
 }
 
 /* Index.html: bottom-info */
@@ -214,7 +217,7 @@ nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
   justify-content: center;
 }
 #bottom-info li{ padding:10px; font-size:24px; vertical-align: bottom; padding-bottom: 0;}
-#bottom-info li a{ color:black; font-weight: 600; line-height:3rem; letter-spacing: -2px;}
+#bottom-info li div{ color:white; font-weight: 600; line-height:3.5rem; letter-spacing: -1px;}
 #bottom-info img{width:28%;}
 
 
@@ -575,6 +578,7 @@ footer span{color:#727272; padding:5px}
   }
   .top-util{display:none}
   .nav-link{font-size:18px}
+  .nav-sub-text{font-size: 14px; line-height: 2px;}
   .main-business-tt h2{font-size: 36px;}
   .main-business-tt h3{font-size: 14px;  letter-spacing: -1px;}
 
@@ -588,12 +592,14 @@ footer span{color:#727272; padding:5px}
   .sub-menu-btn a{font-size: 16px;}
   .sub-menu-btn.col4 div{height: 80px;}
 
+  .portfolio {margin-top:30px;}
+
   #bottom-info li a{ font-size:20px; line-height:2rem; }
 }
 @media (max-width: 768px){
   .main-business-tt h2{font-size: 32px;}
   .main-business-tt h3{font-size: 12px;}
-  .portfolio {margin-top:30px;}
+
 
   #greet h2{font-size: 20px;}
   #greet h3{font-size: 18px;}
@@ -610,9 +616,14 @@ footer span{color:#727272; padding:5px}
   .main-business-tt h3{font-size: 9px; letter-spacing: -1px; margin-left:.5rem;}
   .nav-link{font-size:15px;}
   .nav-sub{display:none!important;}
-  .nav-sub-text{font-size: 10px; line-height: 2px;}
 
-  .portfolio-item{padding:10px 20px;}
+
+  .portfolio {margin-top:10px; margin-left:2px; margin-right: 2px;}
+  .portfolio-item{height:300px; padding: 3px ; margin:auto;}
+  .card-title{font-weight: 400; font-size: 18px;}
+  .card-text{font-size:12px;}
+  .card-text{margin:0;}
+  .card-img{height:190px;}
 
   #greet h2{font-size: 16px; margin-bottom:1rem; margin-top:0;}
   #greet h3{font-size: 14px; margin:.5rem auto; line-height: 1.5rem;}
@@ -646,7 +657,11 @@ footer span{color:#727272; padding:5px}
   .normal-tb td{font-size:10px;}
   .work-tb th{font-size:12px;}
   .work-tb td{font-size:10px;}
-  #bottom-info li a{ font-size:18px; line-height:1rem; letter-spacing: -1px;}
+  #bottom-info li div{ font-size:18px; line-height:2rem; letter-spacing: -1px;}
+
+  footer{padding: .25rem 0}
+  footer li{display:block; padding:5px;}
+  footer p{max-width: 100%; margin:0; padding:0 60px;}
 }
 
 
