--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -632,92 +632,77 @@ footer span{color:#727272; padding:5px}
 
 /* 게시판 글쓰기 */
 #board_write {
-	width:90%;
+	width:100%;
 	position:relative;
 	margin:0 auto;
 }
-#write_area {
-	margin-top:70px;
-	font-size:14px;}
-#in_name {
-	margin-top:30px;
-}
+#board_write h5{color:#003E78; opacity:0.7; margin:0; text-align: center;}
+#write_area {	margin-top:40px;	font-size:16px;}
+#in_name { margin-top:20px;}
 #in_name textarea {
 	font-weight:bold;
-	font-size:26px;
+	font-size:20px;
 	color:#333;
-	width: 900px;
+	width: 100%;
 	border:none;
 	resize: none;
 }
-#in_title {
-	margin-top:30px;
-}
+#in_title {	margin-top:20px;}
 #in_title textarea {
 	font-weight:bold;
-	font-size:26px;
+	font-size:20px;
 	color:#333;
-	width: 900px;
+	width: 100%;
 	border:none;
 	resize: none;
 }
-.wi_line {
-	border:solid 1px lightgray;
-	margin-top:10px;
-}
-#in_content {
-	margin-top:10px;
-}
+.wi_line {	border:solid 1px lightgray;	margin-top:2px;}
+#in_content {	margin-top:20px;}
 #in_content textarea {
-	font:14px;
+  padding:10px;
+	font:18px;
 	color:#333;
-	width: 900px;
+	width: 100%;
 	height: 400px;
 	resize: none;
 }
-#in_pw input {
-	font:14px;
-	margin-top:10px;
-}
+
 .bt_se {
 	margin-top:20px;
-	text-align:center;
+  text-align:center;
 }
-.bt_se button {
-	width:100px;
-	height:30px;
-}
-#in_lock {
-	margin-top:10px;
-}
+.bt_se button{font-size:18px; padding:10px 18px;}
+#in_lock {	margin-top:10px;}
+#in_file {margin-top:10px;}
 
 /* 게시판 read */
 #board_read {
-	width:900px;
+	width:100%;
 	position: relative;
 	word-break:break-all;
 }
-#user_info {
-	font-size:14px;
-}
-#user_info ul li {
-	float:left;
-	margin-left:10px;
-}
+#board_read .flex-box{justify-content: space-between;}
+#board-title-bar{background-color: #f0f0f0; border-bottom: 2px solid #dedee4;}
+#board-title-bar h2{margin:0;}
+#user_info {	position:relative; bottom:-38px; font-size:16px;}
+
 #bo_line {
-	width:880px;
+	width:100%;
 	height:2px;
 	background: gray;
-	margin-top:20px;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 #bo_content {
-	margin-top:20px;
+  margin-top:20px;
+  padding:10px 20px;
 }
 #bo_ser {
 	font-size:14px;
 	color:#333;
-	position: absolute;
-	right: 0;
+  position: relative;
+  left:84%;
+  padding-bottom:30px;
 }
 #bo_ser > ul > li {
 	float:left;
@@ -836,6 +821,11 @@ footer span{color:#727272; padding:5px}
   .work-tb th{font-size:12px;}
   .work-tb td{font-size:10px;}
   #bottom-info li div{ font-size:18px; line-height:2rem; letter-spacing: -1px;}
+  .list-table {	margin-top:20px; }
+  .list-table thead th{height:40px; font-size: 13px; }
+  .list-table tbody td{height:40px; font-size: 12px; }
+  .list-table .nn{display:none; }
+
 
   footer{padding: .25rem 0}
   footer li{display:block; padding:5px;}
