--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -685,7 +685,7 @@ footer span{color:#727272; padding:5px}
 #board-title-bar{background-color: #f0f0f0; border-bottom: 2px solid #dedee4;}
 #board-title-bar h2{margin:0;}
 #user_info {	position:relative; bottom:-38px; font-size:16px;}
-
+#board-file{margin:10px 20px;}
 #bo_line {
 	width:100%;
 	height:2px;
