--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -681,7 +681,7 @@ footer span{color:#727272; padding:5px}
 	position: relative;
 	word-break:break-all;
 }
-#board_read .flex-box{justify-content: space-between;}
+#board-title-bar.flex-box{justify-content: space-between;}
 #board-title-bar{background-color: #f0f0f0; border-bottom: 2px solid #dedee4;}
 #board-title-bar h2{margin:0;}
 #user_info {	position:relative; bottom:-38px; font-size:16px;}
@@ -701,12 +701,10 @@ footer span{color:#727272; padding:5px}
 	font-size:14px;
 	color:#333;
   position: relative;
-  left:84%;
   padding-bottom:30px;
 }
-#bo_ser > ul > li {
-	float:left;
-	margin-left:10px;
+#bo_ser div{
+  margin:0 5px;
 }
 .re_ct {font-weight:bold; color:blue;}
 
