--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -36,7 +36,7 @@ a:hover {color:black; text-decoration: none;}
 p, h2, h3{line-height: 2em}
 ul{ padding:0; list-style: none;}
 
-
+.img-border{border:2px solid #333333;}
 /* Navigation Bar */
 nav{font-family: 'Noto Sans KR', sans-serif; margin-bottom:5px}
 
